@@ -155,6 +155,7 @@ src_libmingwex=\
   misc/winbs_uint64.c  misc/winbs_ulong.c   misc/winbs_ushort.c          misc/wmemchr.c         misc/wmemcmp.c         \
   misc/wmemcpy.c       misc/wmemmove.c      misc/wmemset.c \
   misc/mingw_usleep.c  misc/mingw_output_format.c misc/_wctime32.c \
+  misc/_crt_veh.c \
   \
   stdio/mingw_pformat.h \
   stdio/atoll.c           stdio/_Exit.c          stdio/_findfirst64i32.c  stdio/_wfindfirst64i32.c stdio/_findnext64i32.c  \
